overflow fixes

--- a/src/scss/blocks/catalog.scss
+++ b/src/scss/blocks/catalog.scss
@@ -1,6 +1,6 @@
 .catalog {
-  margin-left: -1.15%;
-  margin-right: -1.15%;
+  margin-left: 1.15%;
+  margin-right: 1.15%;
 }
 
 .catalog__list {
