--- a/src/scss/blocks/contacts.scss
+++ b/src/scss/blocks/contacts.scss
@@ -7,12 +7,13 @@
   position: absolute;
   top: 0;
   left: 0;
+  background: #dddddd url("../img/map.jpg") no-repeat 25% top;
 }
 
 .contacts__map {
   position: relative;
-  z-index: -1;
   display: block;
+  opacity: 0;
 }
 
 .contacts__block {
@@ -55,4 +56,3 @@
   line-height: 22px;
   font-weight: 700;
 }
-
