--- a/src/scss/blocks/page-main.scss
+++ b/src/scss/blocks/page-main.scss
@@ -20,3 +20,7 @@
   align-items: flex-start;
   margin-bottom: 39px;
 }
+
+.page-main__contacts {
+  overflow: hidden;
+}
