--- a/src/scss/blocks/slider.scss
+++ b/src/scss/blocks/slider.scss
@@ -43,7 +43,7 @@
 }
 
 .slider__slide-list {
-  margin: 0;
+  margin: 0 -2.411%;
   padding: 0;
   list-style: none;
 }
